add, clone de pagina de login do face

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/img/icon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="/assets/css/reponsiveStyle.css">
     <title>Projeto A P de Extensão l | Phishing</title>
 </head>
 <body>
@@ -39,6 +41,8 @@
         <div class="story"><span>Story</span></div>
         <div class="reels"><span>Reels</span></div>
       </div>
+    </aside>
+    <main>    
       <div class="story-status">
         <div class="stoy-user">
           <img src="/assets/img/story/story-user.png" alt="story Usuário">
@@ -55,6 +59,11 @@
           <img src="/assets/img/story/story-friend01.png" alt="Amigos">
           <p>Andeza</p>
         </div>
+        <div class="story-friends media600">
+          <img src="/assets/img/story/story-friend01.png" alt="Amigos">
+          <p>Andeza</p>
+        </div>
+        
         <div class="story-firends-tablet">
           <div class="story-friends">
             <img src="/assets/img/story/story-friend02.png" alt="Amigos">
@@ -65,8 +74,7 @@
             </div>
           </div>
         </div>
-      </div>
-    </aside>  
+      </div> 
       <div class="feed">
         <div class="feed-info-friend">
           <div class="info-friend-top">
@@ -159,11 +167,20 @@
           </div>
           <div class="info-friend-feed">
             <div class="friend-feed-text">
-              <p>Noite aconchegante com uma xícara de café</p>
-              <br><br><br>
-              <p>Good Evening.</p>
+              <h2>Noticia URGENTE</h2>
+              <br>
+              <p>MORRI ATOR GLOBAL FAMOSU</p>
+              <br>
+              <p>
+                Morri aos 25 anos ,jovem promesa de atuação,
+                ele vinha desimpenhando uma boa atuação no 
+                horariu nobre...
+              </p>
+              <br>
+
+              <p> Clique aqui e confira ! <mark><a href="facebook.html">www.fasibuk.com</a></mark></p>
             </div>
-            <img src="/assets/img/feed/img-fees.png" alt="imagem feed">
+            <img src="/assets/img/feed/luto-ator-globo.webp" alt="imagem feed">
           </div>
           <div class="friend-feed-actions">
             <div class="actions-friend">
