setup grid layout

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         </div>
     </header> 
     <aside>
-      <div class="as-top">
+      <div class="op-top">
         <div class="story"><span>Story</span></div>
         <div class="reels"><span>Reels</span></div>
       </div>
     </aside>
     <main>    
       <div class="story-status">
-        <div class="stoy-user">
+        <div class="story-user">
           <img src="/assets/img/story/story-user.png" alt="story Usuário">
           <div class="add-story">
             <div>+</div>
@@ -59,12 +59,16 @@
           <img src="/assets/img/story/story-friend01.png" alt="Amigos">
           <p>Andeza</p>
         </div>
+        <div class="story-friends">
+          <img src="/assets/img/story/story-friend.png" alt="Amigos">
+          <p>Paloma</p>
+        </div>
         <div class="story-friends media600">
           <img src="/assets/img/story/story-friend01.png" alt="Amigos">
           <p>Andeza</p>
         </div>
         
-        <div class="story-firends-tablet">
+        <div class="story-firends media600">
           <div class="story-friends">
             <img src="/assets/img/story/story-friend02.png" alt="Amigos">
             <p>André</p>
@@ -78,14 +82,14 @@
       <div class="feed">
         <div class="feed-info-friend">
           <div class="info-friend-top">
-            <div class="friend-top-right">
+            <div class="friend-top-left">
               <img src="/assets/img/story/andre.png" alt="amigos">
               <div class="info-text">
                 <h2>André</h2>
                 <p>agora</p>
               </div>
             </div>
-            <div class="friend-top-left">
+            <div class="friend-top-right">
               <p>...</p>
             </div>
           </div>
@@ -114,14 +118,14 @@
         </div>
         <div class="feed-info-friend">
           <div class="info-friend-top">
-            <div class="friend-top-right">
+            <div class="friend-top-left">
               <img src="/assets/img/story/andreza.png" alt="amigos">
               <div class="info-text">
                 <h2>Andeza</h2>
                 <p>agora</p>
               </div>
             </div>
-            <div class="friend-top-left">
+            <div class="friend-top-rigth">
               <p>...</p>
             </div>
           </div>
@@ -154,14 +158,14 @@
         </div>
         <div class="feed-info-friend">
           <div class="info-friend-top">
-            <div class="friend-top-right">
+            <div class="friend-top-left">
               <img src="/assets/img/story/andre.png" alt="amigos">
               <div class="info-text">
                 <h2>André</h2>
                 <p>agora</p>
               </div>
             </div>
-            <div class="friend-top-left">
+            <div class="friend-top-right">
               <p>...</p>
             </div>
           </div>
