setup responsividade desktop

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <!--Mobile-->
         <div class="header-mobile">
             <div class="mobile-top">
                 <h2>facebook</h2>
@@ -35,7 +36,74 @@
             <input type="text" name="name" placeholder="No que você esta pensando hoje?">
             <i class="fa-solid fa-images"></i>
         </div>
+        <!--Desktop-->
+        <div class="header-desktop">
+          <div class="top-left">
+            <div class="logo">
+              <img src="/assets/img/icon.webp" alt="Logo Facebook">
+            </div>
+            <div class="input">
+              <input type="search" class="search" placeholder="Procurar no Facebook">
+            </div>
+          </div>
+          <div class="top-center">
+            <i class="fa-solid fa-house"></i>
+            <div class="watch">
+              <i class="fa-solid fa-tv"></i>
+              <span>►</span>
+            </div>
+            <i class="fa-solid fa-store"></i>
+            <i class="fa-solid fa-users"></i>
+            <i class="fa-solid fa-gamepad"></i>                
+          </div>
+          <div class="top-right">
+            <i class="fa-solid fa-bars right"></i>
+            <i class="fa-brands fa-facebook-messenger right"></i>
+            <i class="fa-solid fa-bell right"></i>
+            <img src="/assets/img/header/avatar.svg" alt="">
+          </div>
+        </div>
     </header> 
+    <article>
+      <scection class="article-left">      
+        <div class="article-desktop">
+          <div class="user-avatar user">
+            <img src="/assets/img/header/avatar.svg" alt="Avatar usuario">
+            <p>Eric Bertucci</p>
+          </div>
+          <div class="user-friend user">
+            <i class="fa-solid fa-user-group"></i>
+            <p>Amigos</p>
+          </div>
+          <div class="user-market user">
+            <i class="fa-solid fa-store"></i>
+            <p>Loja</p>
+          </div>
+          <div class="user-recent user">
+            <i class="fa-solid fa-clock-rotate-left"></i>
+            <p>Mais Recente</p>
+          </div>
+          <div class="user-group user">
+            <i class="fa-solid fa-user-group"></i>
+            <p>Grupos</p>
+          </div>
+          <div class="user-watch user">
+            <div class="watch">
+              <i class="fa-solid fa-tv"></i>
+              <span>►</span>
+            </div>
+            <p>Watch</p>
+          </div>
+          <div class="user-more user">
+            <i class="fa-solid fa-angle-down"></i>
+            <p>Mais</p>
+          </div>
+        </div>
+    </scection>
+    <section class="article-right">
+      
+    </section>
+    </article>
     <aside>
       <div class="op-top">
         <div class="story"><span>Story</span></div>
@@ -53,29 +121,19 @@
         </div>
         <div class="story-friends">
           <img src="/assets/img/story/story-friend.png" alt="Amigos">
-          <p>Paloma</p>
         </div>
         <div class="story-friends">
           <img src="/assets/img/story/story-friend01.png" alt="Amigos">
-          <p>Andeza</p>
         </div>
         <div class="story-friends">
           <img src="/assets/img/story/story-friend.png" alt="Amigos">
-          <p>Paloma</p>
         </div>
         <div class="story-friends media600">
           <img src="/assets/img/story/story-friend01.png" alt="Amigos">
-          <p>Andeza</p>
-        </div>
-        
+        </div>        
         <div class="story-firends media600">
           <div class="story-friends">
             <img src="/assets/img/story/story-friend02.png" alt="Amigos">
-            <p>André</p>
-            <div class="story-friends">
-              <img src="/assets/img/story/story-friend01.png" alt="Amigos">
-              <p>Andeza</p>
-            </div>
           </div>
         </div>
       </div> 
