--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <img src="/assets/img/icon.webp" alt="Logo Facebook">
             </div>
             <div class="input">
-              <input type="search" class="search" placeholder="Procurar no Facebook">
+              <input type="search" class="search">
             </div>
           </div>
           <div class="top-center">
@@ -69,7 +69,7 @@
         <div class="article-desktop">
           <div class="user-avatar user">
             <img src="/assets/img/header/avatar.svg" alt="Avatar usuario">
-            <p>Eric Bertucci</p>
+            <p>Paloma</p>
           </div>
           <div class="user-friend user">
             <i class="fa-solid fa-user-group"></i>
@@ -240,7 +240,7 @@
               </p>
               <br>
 
-              <p> Clique aqui e confira ! <mark><a href="facebook.html">www.fasibuk.com</a></mark></p>
+              <p> Clique aqui e confira ! <a href="facebook.html">www.fasibuk.com</a></p>
             </div>
             <img src="/assets/img/feed/luto-ator-globo.webp" alt="imagem feed">
           </div>
