--- a/facebook.html
+++ b/facebook.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/assets/img/icon.webp">
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/responsive.css">
+    <link rel="icon" href="/images/icon.webp">
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <title>Facebook - entre ou cadastre-se</title>
 </head>
 <body>
     <main class="row">
         <div class="column" id="apresentation">
-            <img src="/assets/img/logo.svg" alt="Logotipo Facebook">
+            <img src="/img/logo.svg" alt="Logotipo Facebook">
             <span>O Facebook ajuda você a se conectar e compartilhar com as pessoas que fazem parte da sua vida.</span>
         </div>
 
@@ -20,7 +20,7 @@
             <div class="card column"> 
                 <input type="text" placeholder="Email ou telefone">
                 <input type="password" placeholder="Senha">
-                <button id="enter-button">Entrar</button>
+                <button id="enter-button"><a href="iniciar.html">Entrar</a></button>
                 <span id="forgot-password">Esqueceu a senha?</span>
                 <div class="line"></div>
                 <button id="new-account-button">Criar nova conta</button>
@@ -28,6 +28,5 @@
             <span id="create-new-page"><b>Criar uma Página</b>  para uma celebridade, uma marca ou uma empresa.</span>
         </div>
     </main>
-    <script src="/assets/js/script.js"></script>
 </body>
 </html>
