Fix: Correção de exibição

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h4>Páginas</h4>
                     <a class='page' href="#">
                         <div class="img-friends">
-                            <img src="/img/avatar.png" alt="Avatar Usuário">
+                            <img src="./img/avatar.png" alt="Avatar Usuário">
                         </div>
                         <p class="name">Codigos</p>
                     </a>
