--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             </div>
         
             <div class="nav-right">
-                <span class="profile"></span>
+                <span class="profile">
+                    <img src="./img/avatar.png" alt="">
+                </span>
 
                 <a href="#">
                     <i class="fa fa-bell"></i>
@@ -56,6 +58,7 @@
                     <ul>
                         <li>
                             <span class="profile"></span>
+                                <img src="./img/avatar.png" alt="Img User">
                             <p>Paloma</p>
                         </li>
                         <li>
