--- a/facebook.html
+++ b/facebook.html
@@ -12,7 +12,7 @@
 <body>
     <main class="row">
         <div class="column" id="apresentation">
-            <img src="/img/logo.svg" alt="Logotipo Facebook">
+            <img src="./img/logo.svg" alt="Logotipo Facebook">
             <span>O Facebook ajuda você a se conectar e compartilhar com as pessoas que fazem parte da sua vida.</span>
         </div>
 
